# itmages-unity-extension

./: CMakeLists.txt  DEPS  PKGBUILD  README  libitmages.install  libitmages.pc.cmake  setversion.sh
cmake/: Compile-schemas.cmake  Update-highcolors.cmake
cmake/vala/: FindVala.cmake
data/: application.desktop.cmake  imaging.ui  org.gnome.itmages.library.gschema.xml
debian/: copyright  dirs  files
nautilus/: CMakeLists.txt  itmages-extension.c.in
po/: application.pot.cmake  ru.po
src/: CMakeLists.txt  button-menu.vala  config.vala  dbus.vala  dialogs.vala  image-item.vala.in  imaging.vala  infobar.vala  pagelogin.vala  pageproxy.vala  toolbar.vala  utils.vala  widget-common.vala  widget-resize.vala  widget-rotate.vala  window.vala.in
